--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,4 @@
-language: node_js
-node_js:
-  - 12.13.0
+language: python
 cache:
   directories:
     - "$HOME/.cache"
@@ -27,4 +25,6 @@ addons:
     - libgconf-2-4
 services:
   - docker
+python:
+  - "3.6"
 
