--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,7 @@ before_install:
   - sudo apt-get install python3
   - git clone https://github.com/EyeSeeTea/d2-docker.git
   - cd d2-docker/
-  - sudo python setup.py install
+  - sudo python3 setup.py install
   - sudo d2-docker --help
   - sudo docker login
   - sudo d2-docker start eyeseetea/dhis2-data:2.30-datasync-sender
