--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: node_js
 node_js:
   - 12.13.0
+env:
+  - DOCKER_COMPOSE_VERSION=1.18
 cache:
   directories:
     - "$HOME/.cache"
@@ -9,6 +11,10 @@ before_install:
   - sudo apt-get update
   - sudo apt-get install python3
   - sudo apt-get install python3-setuptools
+  - sudo rm /usr/local/bin/docker-compose
+  - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
+  - chmod +x docker-compose
+  - sudo mv docker-compose /usr/local/bin
   - git clone https://github.com/EyeSeeTea/d2-docker.git
   - cd d2-docker/
   - sudo python3 setup.py install
