--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
   - git checkout origin/test
   - sudo python3 setup.py install
   - sudo d2-docker --help
-  - sudo docker login
+  - sudo echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
   - sudo d2-docker start eyeseetea/dhis2-data:2.30-datasync-sender
 install:
   - yarn install --frozen-lockfile
