--- a/.travis.yml
+++ b/.travis.yml
@@ -9,11 +9,7 @@ cache:
 before_install:
   - echo fs.inotify.max_user_watches=524288 | sudo tee -a /etc/sysctl.conf && sudo sysctl -p
   - sudo apt-get update
-  - sudo apt update
-  - sudo apt install software-properties-common
-  - sudo add-apt-repository ppa:deadsnakes/ppa
-  - sudo apt update
-  - sudo apt install python3.7
+  - sudo apt-get install python3
   - sudo apt-get install python3-setuptools
   - sudo rm /usr/local/bin/docker-compose
   - curl -L https://github.com/docker/compose/releases/download/${DOCKER_COMPOSE_VERSION}/docker-compose-`uname -s`-`uname -m` > docker-compose
