--- a/.travis.yml
+++ b/.travis.yml
@@ -24,7 +24,9 @@ before_install:
   - sudo d2-docker --help
   - sudo apt-get remove golang-docker-credential-helpers
   - sudo echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - sudo service docker start
+  - sudo systemctl unmask docker.service
+  - sudo systemctl unmask docker.socket
+  - sudo systemctl start docker.service
   - sudo d2-docker start eyeseetea/dhis2-data:2.30-datasync-sender
 install:
   - yarn install --frozen-lockfile
