--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,6 @@ language: node_js
 node_js:
   - 12.13.0
 dist: bionic
-env:
-  - DOCKER_COMPOSE_VERSION=1.18
 cache:
   directories:
     - "$HOME/.cache"
@@ -27,7 +25,7 @@ before_install:
   - sudo systemctl unmask docker.service
   - sudo systemctl unmask docker.socket
   - sudo systemctl start docker.service
-  - sudo d2-docker pull eyeseetea/dhis2-data:2.30-datasync-sender
+  - sudo docker pull eyeseetea/dhis2-data:2.30-datasync-sender
   - sudo d2-docker start eyeseetea/dhis2-data:2.30-datasync-sender
 install:
   - yarn install --frozen-lockfile
