--- a/.travis.yml
+++ b/.travis.yml
@@ -21,10 +21,11 @@ before_install:
   - sudo python3 setup.py install
   - sudo d2-docker --help
   - sudo apt-get remove golang-docker-credential-helpers
-  - sudo echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+  - echo "$DOCKER_PASSWORD" | sudo docker login -u "$DOCKER_USERNAME" --password-stdin
   - sudo systemctl unmask docker.service
   - sudo systemctl unmask docker.socket
   - sudo systemctl start docker.service
+  - groups
   - sudo docker pull eyeseetea/dhis2-data:2.30-datasync-sender
   - sudo d2-docker start eyeseetea/dhis2-data:2.30-datasync-sender
 install:
