--- a/.travis.yml
+++ b/.travis.yml
@@ -25,14 +25,15 @@ before_install:
   - sudo systemctl unmask docker.socket
   - sudo systemctl start docker.service
   - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
-  - docker pull eyeseetea/dhis2-data:2.30-datasync-sender
-  - d2-docker start eyeseetea/dhis2-data:2.30-datasync-sender
+  # - docker pull eyeseetea/dhis2-data:2.30-datasync-sender
+  - d2-docker start eyeseetea/dhis2-data:2.30-datasync-sender -d
 install:
   - yarn install --frozen-lockfile
   - yarn cy:verify
   - yarn build
 script:
   - PORT=8081 REACT_APP_DHIS2_BASE_URL=http://localhost:8080 REACT_APP_CYPRESS=true yarn start &
+  - yarn wait-on http-get://localhost:8080
   - yarn wait-on http-get://localhost:8081
   - CYPRESS_EXTERNAL_API=http://localhost:8080 CYPRESS_ROOT_URL=http://localhost:8081 yarn cy:e2e:run --key $CYPRESS_KEY
   - kill $(jobs -p) || true
